{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 35,
  "lineage": "80e4356c-cb17-dd8f-875c-f11e50454331",
  "resources": [
    {
      "module": "module.Nginx_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxPetOne",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:528910777322:instance/i-029799ad5b7d44982",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029799ad5b7d44982",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06a8a2a41a9b87f6f",
            "private_dns": "ip-10-0-0-111.us-east-2.compute.internal",
            "private_ip": "10.0.0.111",
            "public_dns": "ec2-18-191-236-66.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.236.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035a82cea5e1a502d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044930899ca9d1369",
            "tags": {
              "Name": "nginxPetOne"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad9a2128524a94c5"
            ]
          },
          "dependencies": [
            "module.sec_group.aws_security_group.secGrpNginx",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.Nginx_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxPetTwo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:528910777322:instance/i-097a59e3b11252c86",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097a59e3b11252c86",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-007dd641fc16af3a8",
            "private_dns": "ip-10-0-1-89.us-east-2.compute.internal",
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-3-139-77-108.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.77.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01a7fa7c1ed3ae020",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e322e3ef7163b6f0",
            "tags": {
              "Name": "nginxPetTwo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad9a2128524a94c5"
            ]
          },
          "dependencies": [
            "module.sec_group.aws_security_group.secGrpNginx",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.app_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "appPetOne",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:528910777322:instance/i-0aeaf637dd518f82c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aeaf637dd518f82c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c6de7cdfb51bbe6",
            "private_dns": "ip-10-0-10-61.us-east-2.compute.internal",
            "private_ip": "10.0.10.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095ed2664b601df3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c65b8baae0fac90",
            "tags": {
              "Name": "appPetOne"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af2530780dfb4f14"
            ]
          },
          "dependencies": [
            "module.sec_group.aws_security_group.secGrpApp",
            "module.vpc.aws_subnet.segment_private1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.app_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "appPetTwo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:528910777322:instance/i-01bcd34e24d5d2e29",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bcd34e24d5d2e29",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01dc2bcb1ed13828d",
            "private_dns": "ip-10-0-11-150.us-east-2.compute.internal",
            "private_ip": "10.0.11.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3b68ef6ee41899b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068073fbd62ef1ee0",
            "tags": {
              "Name": "appPetTwo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0af2530780dfb4f14"
            ]
          },
          "dependencies": [
            "module.sec_group.aws_security_group.secGrpApp",
            "module.vpc.aws_subnet.segment_private2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02aadebc94b653aa1",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-249-87.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.249.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02c20b67b021ee09c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-22-94.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.22.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:internet-gateway/igw-03a4bfbe5d64c2d2a",
            "id": "igw-03a4bfbe5d64c2d2a",
            "owner_id": "528910777322",
            "tags": {
              "name": "Public_gateway"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02aadebc94b653aa1",
            "id": "nat-084880a99e800716e",
            "network_interface_id": "eni-096fbb19ad9a701ce",
            "private_ip": "10.0.0.110",
            "public_ip": "3.139.249.87",
            "subnet_id": "subnet-044930899ca9d1369",
            "tags": {
              "Name": "nat-gateway1"
            }
          },
          "dependencies": [
            "module.gateways.aws_eip.elastic_ip1",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c20b67b021ee09c",
            "id": "nat-09c476e9951741795",
            "network_interface_id": "eni-0f152bb41b0e55551",
            "private_ip": "10.0.1.100",
            "public_ip": "3.128.22.94",
            "subnet_id": "subnet-0e322e3ef7163b6f0",
            "tags": {
              "Name": "nat-gateway2"
            }
          },
          "dependencies": [
            "module.gateways.aws_eip.elastic_ip2",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_route_table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07279357c7b53c6c9",
            "owner_id": "528910777322",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-084880a99e800716e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT-route-table1"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.gateways.aws_eip.elastic_ip1",
            "module.gateways.aws_nat_gateway.nat_gateway1",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_route_table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bc78f689e7a6c6df",
            "owner_id": "528910777322",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09c476e9951741795",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT-route-table2"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.gateways.aws_eip.elastic_ip2",
            "module.gateways.aws_nat_gateway.nat_gateway2",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_Public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5afe42f8dd40ad1",
            "owner_id": "528910777322",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a4bfbe5d64c2d2a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_Public_gateway"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.gateways.aws_internet_gateway.Public_gateway",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_to_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0951488ac1e5e6a25",
            "route_table_id": "rtb-07279357c7b53c6c9",
            "subnet_id": "subnet-02c65b8baae0fac90"
          },
          "dependencies": [
            "module.gateways.aws_eip.elastic_ip1",
            "module.gateways.aws_nat_gateway.nat_gateway1",
            "module.gateways.aws_route_table.NAT_route_table1",
            "module.vpc.aws_subnet.segment_private1",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_to_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0672c21c9ac718532",
            "route_table_id": "rtb-0bc78f689e7a6c6df",
            "subnet_id": "subnet-068073fbd62ef1ee0"
          },
          "dependencies": [
            "module.gateways.aws_eip.elastic_ip2",
            "module.gateways.aws_nat_gateway.nat_gateway2",
            "module.gateways.aws_route_table.NAT_route_table2",
            "module.vpc.aws_subnet.segment_private2",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089a66c7cc278d050",
            "route_table_id": "rtb-0c5afe42f8dd40ad1",
            "subnet_id": "subnet-044930899ca9d1369"
          },
          "dependencies": [
            "module.gateways.aws_internet_gateway.Public_gateway",
            "module.gateways.aws_route_table.route_table_Public_gateway",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.gateways",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1ea0c84016a75b3",
            "route_table_id": "rtb-0c5afe42f8dd40ad1",
            "subnet_id": "subnet-0e322e3ef7163b6f0"
          },
          "dependencies": [
            "module.gateways.aws_internet_gateway.Public_gateway",
            "module.gateways.aws_route_table.route_table_Public_gateway",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "petClinicPrivateALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:loadbalancer/app/petClinicPrivateALB/d8f76a3d87e80f93",
            "arn_suffix": "app/petClinicPrivateALB/d8f76a3d87e80f93",
            "dns_name": "petClinicPrivateALB-1258830416.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:loadbalancer/app/petClinicPrivateALB/d8f76a3d87e80f93",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petClinicPrivateALB",
            "security_groups": [
              "sg-0af2530780dfb4f14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c65b8baae0fac90"
              },
              {
                "subnet_id": "subnet-068073fbd62ef1ee0"
              }
            ],
            "subnets": [
              "subnet-02c65b8baae0fac90",
              "subnet-068073fbd62ef1ee0"
            ],
            "vpc_id": "vpc-00539daf26f02a6d0",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.sec_group.aws_security_group.secGrpApp",
            "module.vpc.aws_subnet.segment_private1",
            "module.vpc.aws_subnet.segment_private2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "petClinicPublicALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:loadbalancer/app/petClinicPublicALB/58e11a8272fa4406",
            "arn_suffix": "app/petClinicPublicALB/58e11a8272fa4406",
            "dns_name": "petClinicPublicALB-1156408048.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:loadbalancer/app/petClinicPublicALB/58e11a8272fa4406",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petClinicPublicALB",
            "security_groups": [
              "sg-0ad9a2128524a94c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044930899ca9d1369"
              },
              {
                "subnet_id": "subnet-0e322e3ef7163b6f0"
              }
            ],
            "subnets": [
              "subnet-044930899ca9d1369",
              "subnet-0e322e3ef7163b6f0"
            ],
            "vpc_id": "vpc-00539daf26f02a6d0",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.sec_group.aws_security_group.secGrpNginx",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:listener/app/petClinicPrivateALB/d8f76a3d87e80f93/640bc1c5d2d94569",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:listener/app/petClinicPrivateALB/d8f76a3d87e80f93/640bc1c5d2d94569",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:loadbalancer/app/petClinicPrivateALB/d8f76a3d87e80f93",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.load_balancers.aws_lb.petClinicPrivateALB",
            "module.load_balancers.aws_lb_target_group.app_tg",
            "module.sec_group.aws_security_group.secGrpApp",
            "module.vpc.aws_subnet.segment_private1",
            "module.vpc.aws_subnet.segment_private2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:listener/app/petClinicPublicALB/58e11a8272fa4406/a5640eeb1e30d9d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:listener/app/petClinicPublicALB/58e11a8272fa4406/a5640eeb1e30d9d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:loadbalancer/app/petClinicPublicALB/58e11a8272fa4406",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.load_balancers.aws_lb.petClinicPublicALB",
            "module.load_balancers.aws_lb_target_group.nginx_tg",
            "module.sec_group.aws_security_group.secGrpNginx",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6",
            "arn_suffix": "targetgroup/app-tg/e02565dcaa4244f6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371",
            "arn_suffix": "targetgroup/nginx-tg/841b40c0aa5df371",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6-20210307091006367500000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6",
            "target_id": "i-0aeaf637dd518f82c"
          },
          "dependencies": [
            "module.app_instances.aws_instance.appPetOne",
            "module.load_balancers.aws_lb_target_group.app_tg",
            "module.sec_group.aws_security_group.secGrpApp",
            "module.vpc.aws_subnet.segment_private1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6-20210307090948090300000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/app-tg/e02565dcaa4244f6",
            "target_id": "i-01bcd34e24d5d2e29"
          },
          "dependencies": [
            "module.app_instances.aws_instance.appPetTwo",
            "module.load_balancers.aws_lb_target_group.app_tg",
            "module.sec_group.aws_security_group.secGrpApp",
            "module.vpc.aws_subnet.segment_private2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371-20210307091003384000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371",
            "target_id": "i-029799ad5b7d44982"
          },
          "dependencies": [
            "module.Nginx_instances.aws_instance.nginxPetOne",
            "module.load_balancers.aws_lb_target_group.nginx_tg",
            "module.sec_group.aws_security_group.secGrpNginx",
            "module.vpc.aws_subnet.segment_public1",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371-20210307091003404300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:528910777322:targetgroup/nginx-tg/841b40c0aa5df371",
            "target_id": "i-097a59e3b11252c86"
          },
          "dependencies": [
            "module.Nginx_instances.aws_instance.nginxPetTwo",
            "module.load_balancers.aws_lb_target_group.nginx_tg",
            "module.sec_group.aws_security_group.secGrpNginx",
            "module.vpc.aws_subnet.segment_public2",
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.sec_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secGrpApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:security-group/sg-0af2530780dfb4f14",
            "description": "Allow traffic between nginx VM to App VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af2530780dfb4f14",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secGrpApp",
            "name_prefix": "",
            "owner_id": "528910777322",
            "revoke_rules_on_delete": false,
            "tags": {
              "secGrpApp": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.sec_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secGrpNginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:security-group/sg-0ad9a2128524a94c5",
            "description": "Allow traffic between users to our nginx servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad9a2128524a94c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secGrpNginx",
            "name_prefix": "",
            "owner_id": "528910777322",
            "revoke_rules_on_delete": false,
            "tags": {
              "secGrpNginx": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.sec_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secGrpRDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:security-group/sg-065fc1f03e2127e70",
            "description": "Allow traffic between nginx VM to App VM",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065fc1f03e2127e70",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secGrpRDS",
            "name_prefix": "",
            "owner_id": "528910777322",
            "revoke_rules_on_delete": false,
            "tags": {
              "secGrpRDS": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "segment_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:subnet/subnet-02c65b8baae0fac90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-02c65b8baae0fac90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528910777322",
            "tags": {
              "Name": "segment_private1"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "segment_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:subnet/subnet-068073fbd62ef1ee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-068073fbd62ef1ee0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528910777322",
            "tags": {
              "Name": "segment_private2"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "segment_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:subnet/subnet-044930899ca9d1369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-044930899ca9d1369",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528910777322",
            "tags": {
              "Name": "segment_public1"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "segment_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:subnet/subnet-0e322e3ef7163b6f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e322e3ef7163b6f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528910777322",
            "tags": {
              "Name": "segment_public2"
            },
            "vpc_id": "vpc-00539daf26f02a6d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpcOne"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcOne",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:528910777322:vpc/vpc-00539daf26f02a6d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edd49646119ba9a9",
            "default_route_table_id": "rtb-06359622c856956eb",
            "default_security_group_id": "sg-0020e62f465dfa384",
            "dhcp_options_id": "dopt-d59b0bbe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00539daf26f02a6d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06359622c856956eb",
            "owner_id": "528910777322",
            "tags": {
              "Name": "vpcOne"
            }
          }
        }
      ]
    }
  ]
}